--- a/MinecraftDemo.uproject
+++ b/MinecraftDemo.uproject
@@ -27,6 +27,10 @@
 			"Enabled": true
 		},
 		{
+			"Name": "MinecraftPlugin",
+			"Enabled": true
+		},
+		{
 			"Name": "FastNoiseGenerator",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/527737f42da544e9abf8607a40495fbd"
